# slack-bot-2

./: .dockerignore  .env.example  .gitignore  DESIGN.md  README.md  docker-compose.yml  pyproject.toml
database_notes/: querying_guide.md
database_notes/investigations/: cohort-classification.md  competitor-risk.md  question-routing.md  recurring-pattern.md
database_notes/investigations/runtime/: competitor-risk-shortlist.md
database_notes/schema/: relationships.md
demo/: evals-readme.html
src/agents/: __init__.py  builder.py  filesystem.py  logging.py  middleware.py  prompt.py  schemas.py
src/api_service/: Dockerfile  main.py  schemas.py  slack_progress.py  slack_server.py  slack_service.py
src/config/: settings.py
src/database/: __init__.py  checkpointer.py  schemas.py  sqlite.py
src/evals/: Dockerfile  main.py
src/tools/: __init__.py  database.py  schemas.py
